review more spacings - fixes #271 fixes #281

--- a/base/scss/plugins/_jetpack-related-posts.scss
+++ b/base/scss/plugins/_jetpack-related-posts.scss
@@ -1,56 +1,25 @@
+
+
 .related-posts-container {
-  @include spacing(padding, 90px);
+  @include spacing(padding, 4rem 0);
   background-color: $theme-background-color;
 
-  .related-posts-title {
-    // @todo add "h2" class to the element for better consistency
-    @extend .h2 !optional;
-    @include spacing(margin-bottom, 1.5rem);
-
-    color: #222222;
-  }
-
   .c-gallery {
-    @include spacing(margin-left, -5.5rem);
-    @include spacing(margin-top, -5.5rem);
+    @include spacing(margin-top, -$featured-posts-vertical-spacing);
+    @include spacing(margin-left, -$featured-posts-horizontal-spacing);
 
     max-width: none;
     width: auto;
     margin-bottom: 0;
 
     & > * {
-      margin-top: 0;
-      margin-bottom: -0.5rem;
-
-      @include spacing(padding-left, 5.5rem);
-      @include spacing(padding-top, 5.5rem);
+      @include spacing(margin-top, $featured-posts-vertical-spacing);
+      @include spacing(padding-left, $featured-posts-horizontal-spacing);
 
       @include below(lap) {
         width: 100%;
       }
     }
-  }
-
-  .c-card__aside + .c-card__content {
-    @include spacing(margin-top, 20px);
-  }
-
-  .c-card__title {
-    margin-top: 0;
-    color: #2D2D2D;
-
-    &:before,
-    &:after {
-      content: none;
-    }
-
-    & + .c-card__excerpt {
-      @include spacing(margin-top, 2rem);
-    }
-  }
-
-  .c-card__frame {
-    padding-top: 50%;
   }
 
   .c-card__excerpt > *:last-child {
